--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: "Mouse Memoirs", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -8,7 +8,7 @@
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: "Mouse Memoirs", source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -28,27 +28,51 @@ body {
 h1 {
   text-align: center;
   margin-bottom: 50px;
+  font-size: 60px;
 }
 
 .form-wrapper {
   position: relative;
   top: 80px;
   left: 90px;
+  width: 300px;
+  padding: 10px 10px 20px 20px;
+  /*background-image: url('assets/stars.jpg');*/
 }
 
 .day-wrapper {
   margin-bottom: 20px;
+  letter-spacing: 1px;
 }
 
 .time-wrapper {
   margin-bottom: 20px;
+  letter-spacing: 1px;
 }
 
 .attraction-wrapper {
   margin-bottom: 20px;
+  letter-spacing: 1px;
 }
 
 .form-wrapper p {
   margin-bottom: 20px;
+  font-size: 30px;
+}
+
+label {
+  font-size: 18px;
 
 }
+
+select {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+button {
+  border-radius: 8px;
+}
+
+.submitButton {}
